song title no longer wraps if multiple words

--- a/src/styles.css
+++ b/src/styles.css
@@ -853,7 +853,9 @@ pre {
 .title {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   line-height: 20px;
+  border: 1px solid red;
 }
 
 .tag {
